# PREVIS

./: .flake8  .gitignore  README.md  README.rst  environment.yml  example.py  mysurvey.json  pyproject.toml  readme.txt  requirements.txt  setup.py  survey_example.dpy
.github/workflows/: cd.yml  ci.yml
doc/: api_reference.md
previs/: __init__.py  core.py  display.py  instr.py  sed.py  utils.py
previs/_cli/: commands.py  main.py
previs/data/: eso_limits_matisse.json  vizier_catalog_references.json
previs/files/: eso_limits_matisse.dpy
previs/tests/: test_cli.py  test_function.py  test_io.py
previs/tests/data/: small_survey.json
