[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "previs-astro"
version = "1.0.post"
authors = [
    { name = "Anthony Soulain", email = "anthony.soulain@univ-grenoble-alpes.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "astropy",
    "astroquery",
    "matplotlib",
    "scipy",
    "emcee",
    "pandas",
    "matplotlib",
    "numpy",
    "termcolor",
    "uncertainties",
    "multiprocess",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/DrSoulain/PREVIS"

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "doc*",
]
namespaces = false

[tool.setuptools.package-data]
previs = [
    "data/eso_limits_matisse.json",
    "data/vizier_catalog_references.json"
]

[project.scripts]
previs = "previs._cli.main:main"

[tool.black]
line-length = 88

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true
