[build-system]
requires = ["flit-core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "previs-astro"
version = "1.0.1"
description = "Python Request Engine for Virtual Interferometric Survey"
authors = [
    { name = "Anthony Soulain", email = "anthony.soulain@univ-grenoble-alpes.fr" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "lxml",
    "astroquery",
    "matplotlib",
    "scipy",
    "emcee",
    "pandas",
    "matplotlib",
    "numpy",
    "termcolor",
    "uncertainties",
    "multiprocess",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/DrSoulain/PREVIS"

[dependency-groups]
test = [
    "pytest>=7.2.1",
]

[tool.flit.module]
name = "previs"

[tool.flit.sdist]
include = [
    "previs/data/eso_limits_matisse.json",
    "previs/data/vizier_catalog_references.json"
]

[project.scripts]
previs = "previs._cli.main:main"

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true

